# claude-code-config

./: .claude.json.user-local.template  .claude.json.windows.template  .credentials.json  .gitignore  .markdownlint.yml  .markdownlintignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE-COPY-TO-USER-ROOT.md  CLAUDE-GLOBAL.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  DEEP_RESEARCH_V2.3_COMPLETE.md  LICENSE  MCP-USER-SETUP.md  README.md  SECURITY.md  TODO.md  pyproject.toml  settings.json  settings.json.backup  test-precommit.md
.agent/: .sessions  README.md  mermaid-analyst-design.md  tasks-archive.md  tasks.md
.artifacts/: agent-improvement-plan-2025-10-05.md  agent-improvement-summary-2025-10-05.md  bloat-removal-final-report-2025-10-05.md  command-refactor.md  refactoring-plan-2025-10-05.md
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
.plans/: plan-2025-09-27-todo-tasks-resolution.md
.specify/: tasks.md
.todos/: TODO.md
agents/: README.md  accessibility-analyst.md  agent-expert.md  api-analyst.md  api-docs-analyst.md  api-graphql-analyst.md  api-rest-analyst.md  architecture-analyst.md  code-csharp-analyst.md  code-javascript-analyst.md  code-python-analyst.md  code-quality-analyst.md  code-typescript-analyst.md  command-expert.md  compliance-analyst.md  database-analyst.md  database-architecture-analyst.md  database-nosql-analyst.md  database-sql-analyst.md  debugger-analyst.md  deep-researcher.md  docs-analyst.md  docs-docusaurus-analyst.md  documentation-analyst.md  frontend-accessibility-analyst.md  frontend-analyst.md  frontend-nextjs-analyst.md  frontend-react-analyst.md  frontend-shadcn-analyst.md  git-flow-analyst.md  infrastructure-cloud-analyst.md  infrastructure-devops-analyst.md  infrastructure-monitoring-analyst.md  infrastructure-network-analyst.md  infrastructure-terraform-analyst.md  mermaid-analyst.md  mobile-flutter-analyst.md  mobile-ios-swift-analyst.md  mobile-react-native-analyst.md  performance-analyst.md  (+16 more)
commands/: cleanup.md  commit.md  explain.md  git-flow.md  implement.md  profile.md  quick-fix.md  refactor.md  review.md  scaffold.md  security-scan.md  test.md
docs/: MCP-ERROR-HANDLING.md  MCP-TOOL-ASSIGNMENT-MATRIX.md  user-guide.md  (+16 more)
(+382 files in other folders)
